fixed navbar spacing

--- a/src/components/styles/Me.css
+++ b/src/components/styles/Me.css
@@ -81,7 +81,7 @@ button {
 
 @media (max-width: 768px) {
   .me {
-    margin-top: 30px;
+    margin-top: 18px;
   }
   .me .flex {
     text-align: center;
